--- a/node/tsconfig.json
+++ b/node/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "module": "ES6",
-    "target": "ES6",
-    "moduleResolution": "node16",
+    "module": "ESNext",
+    "target": "ESNext",
+    "moduleResolution": "nodenext",
     "sourceMap": true,
     "outDir": "dist",
     "resolveJsonModule": true,
   },
-  "lib": ["es2015"]
+  "lib": ["ESNext"]
 }
