--- a/node/package.json
+++ b/node/package.json
@@ -11,12 +11,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bn.js": "^5.1.1",
+    "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "ethers": "^6.3.0",
     "typescript": "^5.0.4"
   },
   "type": "module",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "bn.js": "^5.2.1",
+    "dotenv": "^16.0.3",
+    "lodash": "^4.17.21"
   }
 }
