--- a/node/package.json
+++ b/node/package.json
@@ -5,20 +5,24 @@
   "main": "main.js",
   "scripts": {
     "start": "npx tsc --module esnext && node --experimental-json-modules dist/node/main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-typescript": "^7.21.4",
     "@types/bn.js": "^5.1.1",
+    "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
     "ethers": "^6.3.0",
+    "jest": "^29.5.0",
     "typescript": "^5.0.4"
   },
   "type": "module",
   "dependencies": {
+    "axios": "^1.3.5",
     "bn.js": "^5.2.1",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21"
