--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.21.4",
     "@babel/preset-typescript": "^7.21.4",
     "@types/bn.js": "^5.1.1",
     "@types/jest": "^29.5.0",
@@ -18,6 +19,7 @@
     "@types/node": "^18.15.11",
     "ethers": "^6.3.0",
     "jest": "^29.5.0",
+    "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   },
   "type": "module",
