--- a/node/package.json
+++ b/node/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^1.3.5",
     "bn.js": "^5.2.1",
+    "chalk": "^5.2.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21"
   }
