chore: install helper crates

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -6,5 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tokio = { version = "1", features = ["full"] }
 ethers = "2.0.3"
 num_enum = "0.6.1"
+serde_json = "1.0.96"
+dotenv = "0.15.0"
+lazy_static = "1.4.0"
